Statuts et conseils pour covid positif dans son foyer

--- a/src/template.html
+++ b/src/template.html
@@ -660,6 +660,9 @@
                     <div id="statut-contact-a-risque-meme-lieu-de-vie" class="statut statut-contact-a-risque-meme-lieu-de-vie" hidden>
                         {{ statut_contact_a_risque_meme_lieu_de_vie }}
                     </div>
+                    <div id="statut-contact-a-risque-meme-lieu-de-vie-sans-depistage" class="statut statut-contact-a-risque-meme-lieu-de-vie-sans-depistage" hidden>
+                        {{ statut_contact_a_risque_meme_lieu_de_vie_sans_depistage }}
+                    </div>
                     <div id="statut-contact-a-risque-avec-test" class="statut statut-contact-a-risque-avec-test" hidden>
                         {{ statut_contact_a_risque_avec_test }}
                     </div>
@@ -721,8 +724,8 @@
                 <div id="conseils-personnels-contact-a-risque-meme-lieu-de-vie" class="conseil" hidden>
                     {{ conseils_personnels_contact_à_risque_meme_lieu_de_vie }}
                 </div>
-                <div id="conseils-personnels-contact-a-risque-meme-lieu-de-vie-sans-test" class="conseil" hidden>
-                    {{ conseils_personnels_contact_à_risque_meme_lieu_de_vie_sans_test }}
+                <div id="conseils-personnels-contact-a-risque-meme-lieu-de-vie-sans-depistage" class="conseil" hidden>
+                    {{ conseils_personnels_contact_à_risque_meme_lieu_de_vie_sans_depistage }}
                 </div>
                 <div id="conseils-personnels-contact-a-risque-autre" class="conseil" hidden>
                     {{ conseils_personnels_contact_à_risque_autre }}
